<resources>
    <string name="app_name">Muslim Amaliyah</string>
    <string name="app_version">Versi 1.3</string>
    <string name="app_download_msg">Download Aplikasi Muslim Amaliyah:Quran,Qosidah,Maulid,Doa,Tata Cara Sholat, Wirid, dan Kompas \n\n</string>
    <string name="author">Basantan IT</string>
    <string name="email">it.basantan@gmail.com</string>
    <string name="telp">082240300501</string>
    <string name="call">PANGGIL 082240300501</string>
    <string name="send">EMAIL it.basantan@gmail.com</string>
    <string name="id_iklan">ca-app-pub-9204269566461273~1559332752</string>
    <string name="interstitial">ca-app-pub-9204269566461273/1524260461</string>
    <string name="interstitial2">ca-app-pub-9204269566461273/3455363197</string>
    <string name="kritik">Mohon Memberi Masukkannya apabila ada kesalahan dalam penulisan, ini semua demi kemajuan aplikasi ini, masukkan anda akan memberikan motivasi dan jawaban.</string>
    <string name="next">LANJUT</string>
    <string name="skip">LEWATI</string>
    <string name="start">MULAI</string>
    <string name="key_latin">key_latin</string>
    <string name="key_terjemahan">key_terjemahan</string>
    <string name="key_list_arabic">key_list_arabic</string>
    <string name="key_list_arabic_size">key_list_arabic_size</string>
    <string name="key_list_latin_size">key_list_latin_size</string>
    <string name="key_list_terjemahan_size">key_list_terjemahan_size</string>
    <string name="slide_1_title">Assalamu`alaikum</string>
    <string name="slide_1_desc">Selamat datang di aplikasi Amaliyah Muslim \n Mudahan aplikasi ini dapat membantu anda. </string>
    <string name="slide_2_title">Waktu Shalat</string>
    <string name="slide_2_desc">Temukan Waktu Shalat yang sesuai dengan Lokasi kamu berada</string>
    <string name="slide_3_title">Qosidah dan Maulid</string>
    <string name="slide_3_desc">Alhamdulillah, aplikasi ini sudah teks Qosidah dan Maulid</string>
    <string name="slide_4_title">Wirid dan Doa</string>
    <string name="slide_4_desc">Amaliyah muslim juga ada Wirid-wirid dan doa dari Risalah Amaliyah</string>
    <string name="slide_5_title">Izin Aplikasi</string>
    <string name="slide_5_desc">Izinkan aplikasi untuk menemukan lokasi Sholat</string>
    <string name="jadwal_sholat">Jadwal Sholat</string>
    <string name="isya">Isya</string>
    <string name="isyatime">19:00</string>
    <string name="magribtime">18:00</string>
    <string name="magrib">Maghrib</string>
    <string name="ashartime">15:00</string>
    <string name="zuhurtome">12:00</string>
    <string name="dzuhur">Dzuhur</string>
    <string name="suuhtime">05:00</string>
    <string name="arah_kabah">Kiblat</string>
    <string name="baca_alquran">Alquran</string>
    <string name="action_settings" />
    <string name="Karachi">karachi</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hint_name">Nama</string>
    <string name="hint_id">ID</string>
    <string name="hint_bacaan">Bacaan</string>
    <string name="hint_arti">Arti</string>
    <string name="hint_hitungan">hitungan</string>
    <string name="error_message_name">Masukkan Judul</string>
    <string name="error_message_arti">Masukkan Arti</string>
    <string name="error_message_hitungan">Total Hitungan</string>
    <string-array name="sholat_arry">
        <item>Sholat Awwabin</item>
        <item>Sholat Dhuha</item>
        <item>Sholat Ghaib</item>
        <item>Sholat Hadiah</item>
        <item>Sholat Hajat</item>
        <item>Sholat Istikharah</item>
        <item>Sholat Jenazah</item>
        <item>Sholat Tahajud</item>
        <item>Sholat Taubat</item>
        <item>Sholat Tasbih</item>
        <item>Sholat Tarawih</item>
        <item>Sholat Witir</item>
    </string-array>
    <string-array name="wirid_arry">
        <item>Wirid Sholat Panjang 1</item>
        <item>Wirid Sholat Pendek 1</item>
        <item>Wirid Sholat Panjang 2</item>
        <item>Wirid Sholat Pendek 2</item>

    </string-array>
    <string name="large_text">
         "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tasbih">TasbihActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
</resources>