<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    tools:context=".Tentang">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/yello" >
        </android.support.v7.widget.Toolbar>
        <android.support.v4.widget.NestedScrollView
            android:background="@color/backgroundcolor"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.v7.widget.CardView
                    app:contentPadding="10dp"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@mipmap/ic_my_launcher"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_marginLeft="10dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/app_name"
                                android:textStyle="bold"
                                style="@style/Base.TextAppearance.AppCompat.Medium"/>
                            <TextView
                                android:layout_marginLeft="10dp"

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/app_version"
                                style="@style/Base.TextAppearance.AppCompat.Small"/>
                        </LinearLayout>
                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_marginTop="10dp"
                    app:contentPadding="10dp"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_author"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_marginTop="10dp"
                                android:layout_marginLeft="10dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/author"
                                android:textStyle="bold"
                                style="@style/Base.TextAppearance.AppCompat.Medium"/>
                                       </LinearLayout>
                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    app:contentPadding="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_kontak"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_marginLeft="10dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/email"
                                style="@style/Base.TextAppearance.AppCompat.Medium"/>
                            <TextView
                                android:layout_marginLeft="10dp"

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/telp"
                                style="@style/Base.TextAppearance.AppCompat.Medium"/>
                        </LinearLayout>
                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    app:contentPadding="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_more"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_marginLeft="10dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Aplikasi Lainnya"
                                style="@style/Base.TextAppearance.AppCompat.Medium"/>
                            <TextView
                                android:layout_marginLeft="10dp"

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Dapatkan lebih banyak aplikasi"
                                style="@style/Base.TextAppearance.AppCompat.Small"/>
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <com.codesgood.views.JustifiedTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/kritik"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:orientation="vertical">
                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/btnOk"
                            android:visibility="visible"
                            android:onClick="btnOk"
                            android:layout_width="match_parent"
                            android:padding="10dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_height="wrap_content"
                            android:text="BANTU SAYA"
                            android:textColor="@color/putih"
                            tools:ignore="OnClick" />

                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>



        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>